# uni-evm

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.toml.example  create-uni-evm-shard-conf.sh  genesis.json  setup-development.sh  test.sh  update-config.sh  verify-setup.sh  verify-zk-setup.sh
cmd/uni-evm/: Cargo.toml
cmd/uni-evm/src/: config.rs  keys.rs  main.rs  node.rs  pending_state.rs  rpc.rs
crates/bft-committer/: Cargo.toml
crates/bft-committer/src/: cbor.rs  committer.rs  lib.rs  network.rs  storage.rs  types.rs
crates/bft-precompile/: Cargo.toml  INTEGRATION.md
crates/bft-precompile/src/: lib.rs  precompile.rs  trust_base.rs  trust_base_updater.rs
crates/uni-sequencer/: Cargo.toml
crates/uni-sequencer/src/: block_finalizer.rs  block_producer.rs  lib.rs  proof_coordinator.rs  sp1_prover.rs
crates/uni-storage/: Cargo.toml
crates/uni-storage/src/: lib.rs
docker/staging/: Dockerfile.uni-evm  README.md  docker-compose.yml  setup-staging.sh
guest-program/: Cargo.toml  build.rs
guest-program/src/: execution.rs  input.rs  lib.rs  output.rs
guest-program/src/sp1/: Cargo.toml
guest-program/src/sp1/src/: main.rs
tools/extract-vkey/: Cargo.toml
tools/extract-vkey/src/: main.rs
tools/extract-vkey/tools/extract-vkey/src/: main.rs
