[package]
name = "uni-evm-guest"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Ethrex dependencies - reuse their execution logic
ethrex-common = { path = "../ethrex/crates/common", default-features = false }
ethrex-blockchain = { path = "../ethrex/crates/blockchain", default-features = false }
guest_program = { path = "../ethrex/crates/l2/prover/src/guest_program" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rkyv = { version = "0.8.10", features = ["std", "unaligned"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[build-dependencies]
sp1-sdk = { version = "5.0.8", optional = true }
sp1-build = { version = "5.0.8", optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:sp1-build", "dep:bincode"]
