[package]
name = "uni-bft-precompile"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Ethrex common dependencies
ethrex-common = { workspace = true }
ethereum-types.workspace = true

# BFT Core types
uni-bft-committer = { workspace = true }
ciborium.workspace = true
secp256k1.workspace = true

# Common utilities
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
hex.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
