[package]
name = "uni-sequencer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Ethrex core
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-prover-lib.workspace = true
guest_program.workspace = true
ethrex-l2-common.workspace = true
ethereum-types.workspace = true

# Uni-EVM crates
uni-bft-committer.workspace = true
uni-storage.workspace = true

# SP1 proving (optional)
sp1-sdk = { workspace = true, optional = true }
sp1-prover = { workspace = true, optional = true }
bincode.workspace = true
rkyv.workspace = true

# Common utilities
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:sp1-prover"]

[dev-dependencies]
