[package]
name = "uni-evm-sp1-guest"
version = "0.1.0"
edition = "2024"
publish = false

# This is an SP1 guest program that runs inside the zkVM
# It must be compiled to RISC-V target (riscv32im-succinct-zkvm-elf)

[workspace]

[[bin]]
name = "uni-evm-sp1-guest"
path = "src/main.rs"

[dependencies]
# SP1 zkVM runtime
sp1-zkvm = "=5.0.8"

# Serialization (rkyv for efficient zkVM deserialization)
rkyv = { version = "0.8.10", features = ["std", "unaligned"] }

# Ethrex dependencies with SP1 features
ethrex-common = { path = "../../../ethrex/crates/common", default-features = false, features = ["sp1"] }
ethrex-blockchain = { path = "../../../ethrex/crates/blockchain", default-features = false, features = ["sp1"] }
ethrex-vm = { path = "../../../ethrex/crates/vm", default-features = false, features = ["sp1"] }
ethrex-storage = { path = "../../../ethrex/crates/storage", default-features = false }
ethrex-rlp = { path = "../../../ethrex/crates/common/rlp" }
ethrex-l2-common = { path = "../../../ethrex/crates/l2/common", default-features = false, features = ["sp1"] }
guest_program = { path = "../../../ethrex/crates/l2/prover/src/guest_program", default-features = false, features = ["sp1-cycles"] }


[patch.crates-io]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.30.0-sp1-5.0.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-16.9-sp1-4.1.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0" }

[patch."https://github.com/lambdaclass/bls12_381"]
bls12_381 = { git = "https://github.com/lambdaclass/bls12_381-patch/", branch = "expose-fp-struct" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging
panic = "abort"
